<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.FragmentDetallesPQR"
    >


    <data>

        <variable
            name="fragment"
            type="com.example.pqrs.ui.fragments.FragmentDetallesPQR" />


        <variable
            name="id"
            type="Integer" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <Button
        android:id="@+id/butEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/editar"
        android:onClickListener="@{(v)-> fragment.irAEditar(id)}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/butDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/borrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/butEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|start"
            android:padding="3dp"
            android:paddingStart="16dp"
            android:text="@string/Tipo_pqr" />

        <TextView
            android:id="@+id/tvAsuntoPqr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|start"
            android:padding="3dp"
            android:paddingStart="16dp"
            android:text="@string/asunto" />

        <TextView
            android:id="@+id/tvFechaCreacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|start"
            android:padding="3dp"
            android:paddingStart="16dp"
            android:text="@string/fecha_creacion" />

        <TextView
            android:id="@+id/tvUsuarioPQr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|start"
            android:padding="3dp"
            android:paddingStart="16dp"
            android:text="@string/usuario_pqr" />

        <TextView
            android:id="@+id/tvEstadoPqr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|start"
            android:padding="3dp"
            android:paddingStart="16dp"
            android:text="@string/estado" />

        <TextView
            android:id="@+id/tvFechaLimitePqr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|start"
            android:padding="3dp"
            android:paddingStart="16dp"
            android:text="@string/fecha_limite" />

        <TextView
            android:id="@+id/tvVigenciaPqr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|start"
            android:padding="3dp"
            android:paddingStart="16dp"
            android:text="@string/vigencia" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
    </layout>